2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables.
	* src/FileEntry.cc
	* src/FileEntry.h

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables.
	* src/File.cc
	* src/File.h

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Made protected member variable private. Added accessor funcs.
	* src/BtPostDownloadHandler.cc
	* src/DownloadHandler.h
	* src/MetalinkPostDownloadHandler.cc

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables.
	* src/DownloadEngine.cc
	* src/DownloadEngine.h

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables.
	* src/DefaultPieceStorage.cc
	* src/DefaultPieceStorage.h

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables. Removed unused member variable.
	* src/DefaultPeerStorage.cc
	* src/DefaultPeerStorage.h
	* src/RequestGroup.cc
	* test/DefaultPeerStorageTest.cc

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables. Removed unused member variable.
	* src/DefaultBtRequestFactory.cc
	* src/DefaultBtRequestFactory.h
	* src/PeerInteractionCommand.cc

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables. Removed unused member variables.
	* src/DefaultBtMessageReceiver.cc
	* src/DefaultBtMessageReceiver.h
	* src/PeerInteractionCommand.cc

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables
	* src/DefaultBtMessageFactory.cc
	* src/DefaultBtMessageFactory.h

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables
	* src/DefaultBtMessageDispatcher.cc
	* src/DefaultBtMessageDispatcher.h

2010-06-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Renamed member variables. Removed member variable peerConnection.
	* src/DefaultBtInteractive.cc